@@ -17,6 +17,10 @@
 * Images can now be opened with GeoTag.  You can select one or more images in
   finder and then right click and select the "Open With" option.  GeoTag will
   be one of app choices.
+* Double clicking on an row in the table will open a window to update the
+  timestamp of the image.  Note: timestamp updates are currently not in
+  the undo/redo stack.  However, changes are not written to the file until
+  triggered by File -> Save (⌘S).  Changes can be discarded.
 * Images can be selected and the map can be panned/zoomed while saving images.
   Images locations can not be edited until the save is complete.
 * The last 10 map searches are saved across program runs. When Clicking on the
